--- a/nucampsite/css/styles.css
+++ b/nucampsite/css/styles.css
@@ -1,13 +1,15 @@
 body {
-    font-family:"Open Sans", sans-serif; 
+    font-family: "Open Sans", sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: "Lobster", cursive
 }
 
-h2{
-    color:#3046c5;
+h2 {
+    color: #3046c5;
 }
 
 header h2 {
@@ -20,13 +22,18 @@ footer {
 }
 
 .jumbotron {
-    padding: 30px; 
+    margin: 0;
+    padding: 30px;
     background-image: linear-gradient(to right, #5637DD, #3046c5, #60106B);
     color: white;
 }
 
 .row-content {
-    padding: 50px 0; 
-    border-bottom: 1px ridge; 
-    min-height: 200px; 
+    padding: 50px 0;
+    border-bottom: 1px ridge;
+    min-height: 200px;
+}
+
+.navbar {
+    background-color: #901CAD
 }
