fix: change to modal color scheme

--- a/nucampsite/css/styles.scss
+++ b/nucampsite/css/styles.scss
@@ -88,14 +88,14 @@ a:hover {
 
 #reservecsModal {
     .modal-header {
-        color: $color-teal;
-        background-color: white;
+        background-color: $color-teal;
+        color: white;
     }
 }
 
 #loginModal {
     .modal-header {
-        color: $color-mid;
-        background-color: white;
+        background-color: $color-mid;
+        color: white;
     }
 }
